# EnterpriseAgentFramework

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  agent-definitions.json  pom.xml
MaxKB-2/: .gitignore  README.md  README_CN.md  pyproject.toml
MaxKB-2/.github/workflows/: build-and-push.yml  typos_check.yml
MaxKB-2/apps/application/chat_pipeline/: I_base_chat_pipeline.py  pipeline_manage.py
MaxKB-2/apps/application/flow/: common.py  default_workflow_en.json  default_workflow_zh_Hant.json  i_step_node.py  tools.py  workflow_manage.py
MaxKB-2/apps/application/long_term_memory/: __init__.py
MaxKB-2/apps/application/migrations/: 0002_application_simple_mcp.py  0003_application_stt_model_params_setting_and_more.py  0004_application_application_enable_and_more.py  0005_chatrecord_vote_other_content_chatrecord_vote_reason.py  0006_application_file_clean_time.py  0007_applicationapikey_expire_time_and_more.py  0008_chat_ip_address_chat_source_chatrecord_ip_address_and_more.py  0009_clean_application_knowledge_mapping.py  0013_application_long_term_enable_and_more.py
MaxKB-2/apps/application/models/: application.py  application_chat.py
MaxKB-2/apps/application/serializers/: application.py  application_access_token.py  application_chat_record.py  application_folder.py  application_stats.py
MaxKB-2/apps/application/sql/: export_application_chat.sql  export_application_chat_ee.sql  get_token_usage.sql  get_token_usage_ee.sql  list_application.sql  list_application_chat.sql  list_application_user.sql  list_application_user_ee.sql  top_questions.sql  top_questions_ee.sql
MaxKB-2/apps/application/views/: application.py  application_chat.py  application_chat_record.py  application_stats.py
MaxKB-2/apps/chat/api/: chat_api.py
MaxKB-2/apps/chat/serializers/: chat.py  chat_embed_serializers.py  chat_record.py
MaxKB-2/apps/chat/template/: embed.js  generate_prompt_system
MaxKB-2/apps/chat/views/: chat_record.py  mcp.py
MaxKB-2/apps/common/auth/: authenticate.py  common.py
MaxKB-2/apps/local_model/: apps.py  urls.py
MaxKB-2/apps/models_provider/: base_ttv.py  tools.py
MaxKB-2/apps/oss/: retrieval_urls.py  urls.py
MaxKB-2/apps/system_manage/: urls.py
MaxKB-2/apps/tools/: urls.py
MaxKB-2/apps/trigger/: tasks.py  urls.py
MaxKB-2/apps/users/: apps.py
MaxKB-2/installer/: Dockerfile-vector-model
MaxKB-2/ui/: admin.html  chat.html  env.d.ts  package.json
MaxKB-2/ui/src/: chat.ts  main.ts
(+2981 files in other folders)
