[project]
name = "maxkb"
version = "2.0.0"
description = "强大易用的开源企业级智能体平台"
authors = [{ name = "shaohuzhang1", email = "shaohu.zhang@fit2cloud.com" }]
requires-python = "~=3.11.0"
readme = "README.md"
dependencies = [
    "django==5.2.14",
    "drf-spectacular[sidecar]==0.28.0",
    "django-redis==6.0.0",
    "django-db-connection-pool==1.2.6",
    "django-mptt==0.17.0",
    "djangorestframework==3.17.1",
    "psycopg[binary]==3.2.9",
    "python-dotenv==1.2.2",
    "uuid-utils==0.14.0",
    "captcha==0.7.1",
    "pytz==2025.2",
    "psutil==7.0.0",
    "cffi==1.17.1",
    "beautifulsoup4==4.13.4",
    "jieba==0.42.1",
    "langchain==1.2.18",
    "langchain-core==1.3.3",
    "langchain-openai==1.2.1",
    "langchain-anthropic==1.4.3",
    "langchain-community==0.4.1",
    "langchain-deepseek==1.0.1",
    "langchain-google-genai==4.2.2",
    "langchain-mcp-adapters==0.2.2",
    "langchain-huggingface==1.2.2",
    "langchain-ollama==1.1.0",
    "langchain-aws==1.4.6",
    "langgraph==1.1.10",
    "deepagents==0.5.8",
    "torch==2.8.0",
    "numpy==1.26.4",
    "sentence-transformers==5.0.0",
    "qianfan==0.4.12.3",
    "zhipuai==2.1.5.20250708",
    "volcengine-python-sdk[ark]==5.0.24",
    "boto3==1.42.46",
    "tencentcloud-sdk-python==3.0.1420",
    "xinference-client==1.7.1.post1",
    "anthropic==0.96.0",
    "dashscope==1.25.16",
    "celery[sqlalchemy]==5.5.3",
    "django-celery-beat==2.8.1",
    "celery-once==3.0.1",
    "django-apscheduler==0.7.0",
    "openpyxl==3.1.5",
    "python-docx==1.2.0",
    "xlrd==2.0.2",
    "xlwt==1.3.0",
    "pypdf==6.10.2",
    "pydub==0.25.1",
    "pysilk==0.0.1",
    "gunicorn==23.0.0",
    "python-daemon==3.1.2",
    "websockets==15.0.1",
    "ruff==0.15.12",
    "cohere==5.17.0",
    "jsonpath-ng==1.8.0",
    "markdownify==1.2.2",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "macpytorch"
url = "https://download.pytorch.org/whl"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch", marker = "sys_platform == 'linux'" },
    { index = "pytorch", marker = "sys_platform == 'win'" },
    { index = "macpytorch", marker = "sys_platform == 'darwin'" },
]

[tool.ruff]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
